added some more tests and control of tests loaging (derwent or gate.ac.uk)